# qrand

./: .gitignore  .markdownlint.yaml  Cargo.toml  README.md  build.rs  tarpaulin-report
qrand_benches/: Cargo.toml  bloat.txt  build.rs  size_00001.txt  size_10000.txt  symbols.txt
qrand_benches/benches/: comparison_calculations.rs
qrand_benches/src/: main.rs
qrand_core/: Cargo.toml  README.md  Todos.md  build.rs  tarpaulin-report  tarpaulin-report.html
qrand_core/src/: error.rs  lib.rs  low_discrepancy_sequence.rs  rd.rs  sobol.rs
qrand_core/tests/: integration_tests.rs
qrand_core_test_application/: Readme.md
qrand_rd_alphas/: Cargo.toml  tarpaulin-report  tarpaulin-report.html
qrand_rd_alphas/src/: lib.rs
qrand_rd_alphas/tests/: integration_tests.rs
qrand_rd_plotter/: Cargo.toml
qrand_rd_plotter/src/: lib.rs  main.rs
qrand_std/: Cargo.toml  README.md  tarpaulin-report  tarpaulin-report.html
qrand_std/src/: lib.rs  rd.rs
qrand_std/tests/: integration_tests.rs
src/: error.rs  lib.rs  low_discrepancy_sequence.rs  rd.rs  sobol.rs
tests/: integration_tests.rs
