[package]
name = "qrand_std"
version = "0.1.0"
authors = ["rusty-octopus <octopus@posteo.net>"]
edition = "2018"
license = "MIT"

[dependencies.qrand_core]
version = "0.31.0"
path = "../qrand_core" 
features = ["rd", "std_interface"]

[dependencies.qrand_rd_alphas]
version = "0.3.0"
path = "../qrand_rd_alphas"
